--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "next": "canary",
-    "next-runtime-env": "^3.2.1",
+    "@nph.muller/next-runtime-env": "0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
